stateDiagram-v2
  PLAYING --> DECIDING_CONTINUE: first consecutive win
  DECIDING_CONTINUE --> HOLDING_COURT: winner continues
  DECIDING_CONTINUE --> LEFT_QUEUE: winner stops
  PLAYING --> RESTING: second consecutive win
  PLAYING --> DECIDING_REQUEUE: loss
  DECIDING_REQUEUE --> WAITING: requeue
  DECIDING_REQUEUE --> LEFT_QUEUE: leave or timeout
  RESTING --> RETURNING_CHAMPION: rest game completed
  RETURNING_CHAMPION --> PLAYING
  [*] --> INCOMPLETE: สร้างทีม
  INCOMPLETE --> READY: สมาชิกครบ
  READY --> INCOMPLETE: ลบสมาชิก
  READY --> WAITING: เข้าคิวสำเร็จ
  WAITING --> CHECK_IN_REQUIRED: ถึงคิว
  CHECK_IN_REQUIRED --> READY_TO_PLAY: เช็กอินครบ
  CHECK_IN_REQUIRED --> MISSED_QUEUE: หมดเวลา
  READY_TO_PLAY --> PLAYING: เริ่มเกม
  PLAYING --> SUBMITTING_SCORE: จบเกม
  SUBMITTING_SCORE --> PLAYING: คะแนนไม่ผ่านและเปิดแก้ไข
  SUBMITTING_SCORE --> WAITING: แพ้และเลือกต่อท้ายคิว
  SUBMITTING_SCORE --> LEFT_QUEUE: แพ้และออก/หมดเวลา
  SUBMITTING_SCORE --> PLAYING: ชนะครั้งแรกและเล่นต่อ
  SUBMITTING_SCORE --> RESTING: ชนะครบ 2 เกม
  RESTING --> RETURNING_CHAMPION: สนามเดิมเล่นครบ 1 เกม
  RETURNING_CHAMPION --> PLAYING: กลับมาเล่นทันที
  MISSED_QUEUE --> LEFT_QUEUE
  WAITING --> LEFT_QUEUE: ออกจากคิว
  LEFT_QUEUE --> READY: สมาชิกยังครบ
